implemented rate limiter, added profile route on frontend and miscellaneous improvements on backend APIs and DB Models

--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "start-dev": "concurrently \"npm run dev\" \"cd client && npm start\""
   },
   "author": "Yash Mangla",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
     "express-validator": "^6.4.0",
     "googleapis": "^48.0.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
+    "rate-limit-redis": "^1.7.0",
+    "redis": "^3.0.2",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
